assets/styles/common/controls.scss
.dropdown-item {
  &.no-hover {
    &:hover,
    &:focus {
      background-color: unset;
    }
  }
}

.oli-radio[type='radio'] {
  color: var(--color-delivery-primary);
}

.oli-checkbox[type='checkbox'] {
  color: var(--color-delivery-primary);
}

.dragHandle {
  cursor: 'move';
  width: 24px;
  color: var(--color-gray-500);
}

.list-group .list-group-item {
  border-bottom: none;
}

.list-group .list-group-item:last-child {
  border-bottom: 1px solid var(--color-gray-100);
}

a.form-control {
  color: var(--color-blue-400);
}

button.icon-button {
  &:hover {
    color: var(--color-primary);
  }
}

button.danger-icon-button {
  &:hover {
    color: var(--color-danger);
  }
}

